# docxiq

./: .gitignore  CHANGELOG.md  SETUP_WASM.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: TODOS.md  feature-recommendations.md
rust-converter/: Cargo.toml  README.md  build.ps1  build.sh
rust-converter/src/: lib.rs
src/: App.tsx  config.ts
src/components/citation/: citation-form.tsx  citation-list.tsx  index.ts  style-selector.tsx
src/components/editors/: code-editor.tsx  equation-editor.tsx  flow-chart.tsx  tiptap.tsx
src/components/landing/: footer.tsx  hero.tsx
src/components/tiptap-ui/color-highlight-button/: use-color-highlight.ts
src/components/ui/: background-beams.tsx
src/hooks/: useGemini.example.tsx  useGemini.ts  useWasmConverter.ts
src/layout/: app.layout.tsx
src/routes/: app.routes.tsx  router.tsx
src/services/: ai.service.ts
src/store/: authStore.ts
src/utils/: citation-extractor.ts  citation-formatter.ts
src/views/: citation-generation.tsx  citation-generator.tsx  converter.tsx  csv-converter.tsx  diff-compare.tsx  editor.tsx  index.tsx  keyword-extractor.tsx  landing.tsx  language-translator.tsx  qr-generator.tsx  readability-analyzer.tsx  summarizer.tsx
src/views/auth/: google-callback.tsx
src/wasm/: .gitkeep  document_converter.d.ts  document_converter.js  document_converter_bg.wasm  document_converter_bg.wasm.d.ts  package.json
