[package]
name = "document-converter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"
lto = true
